# axum-surreal-template

./: .gitignore  Dockerfile  Dockerfile.development  README.md  compose.yaml  justfile
.cargo/: config.toml
backend/: Cargo.toml  TODO.md
backend/.cargo/: config.toml
backend/crates/libs/lib-auth/: Cargo.toml
backend/crates/libs/lib-auth/src/pwd/: error.rs  mod.rs
backend/crates/libs/lib-auth/src/token/: error.rs  mod.rs
backend/crates/libs/lib-rpc/: Cargo.toml
backend/crates/libs/lib-rpc/src/: error.rs  lib.rs  params.rs
backend/crates/libs/lib-rpc/src/router/: mod.rs
backend/crates/libs/lib-rpc/src/rpcs/: mod.rs  task_rpc.rs
backend/crates/libs/lib-sqlserver/: Cargo.toml
backend/crates/libs/lib-sqlserver/src/ctx/: error.rs  mod.rs
backend/crates/libs/lib-sqlserver/src/model/: mod.rs
backend/crates/libs/lib-surrealdb/: Cargo.toml
backend/crates/libs/lib-surrealdb/src/: config.rs  lib.rs
backend/crates/libs/lib-surrealdb/src/ctx/: mod.rs
backend/crates/libs/lib-surrealdb/src/model/: conditions.rs  error.rs  mod.rs
backend/crates/libs/lib-surrealdb/src/model/store/: mod.rs
backend/crates/libs/lib-surrealdb/src/model/task/: bmc.rs  mod.rs
backend/crates/libs/lib-surrealdb/src/model/user_info/: bmc.rs  mod.rs
backend/crates/libs/lib-utils/src/: b64.rs  time.rs
backend/crates/services/web-server/: Cargo.toml
backend/crates/services/web-server/examples/: quick_dev.rs  surrealdb.rs
backend/crates/services/web-server/src/: main.rs
backend/requests/: login.http  task.http
backend/sql/: 01-define-table-userinfo.surql  101-define-table-userinfo.surql  102-define-table-task.surql  201-create_userinfo.surql  202_create_task.surql  203_update_task.surql
backend/sqlserver/: .gitignore  Cargo.toml  TODO.md  compose.yml  justfile
backend/sqlserver/crates/libs/lib-auth/src/: config.rs  lib.rs
backend/sqlserver/crates/libs/lib-auth/src/pwd/: error.rs
backend/sqlserver/crates/libs/lib-auth/src/pwd/scheme/: scheme_01.rs
backend/sqlserver/crates/libs/lib-auth/src/token/: error.rs
backend/sqlserver/crates/libs/lib-rpc/: Cargo.toml
backend/sqlserver/crates/libs/lib-rpc/src/: error.rs  lib.rs  params.rs  resources.rs
backend/sqlserver/crates/libs/lib-rpc/src/router/: mod.rs  rpc_handler.rs  rpc_handler_wrapper.rs
backend/sqlserver/crates/libs/lib-rpc/src/rpcs/: mod.rs  task_rpc.rs
backend/sqlserver/crates/libs/lib-sqlserver/: Cargo.toml
backend/sqlserver/crates/libs/lib-sqlserver/src/: config.rs
backend/sqlserver/crates/libs/lib-sqlserver/src/model/: error.rs  mod.rs
backend/sqlserver/crates/libs/lib-sqlserver/src/model/task/: bmc.rs  mod.rs
backend/sqlserver/crates/libs/lib-sqlserver/src/model/user_info/: bmc.rs  mod.rs
backend/sqlserver/crates/libs/lib-utils/src/: lib.rs
backend/sqlserver/crates/services/web-server/: Cargo.toml
backend/sqlserver/crates/services/web-server/src/: error.rs  main.rs
backend/sqlserver/crates/services/web-server/src/web/: error.rs  mw_auth.rs
backend/sqlserver/requests/: task.http
backend/sqlserver/sql/: 00-create-db.sql  00-define-db.surql  103-define-table-account.surql
backend/sqlserver/sql/start/: 101_20240207_create_userinfo_table.sql
backend/sqlserver/sql/start/10_table/: 101_20240209_create_userinfo_table.sql  102_20240209_create_task_table.sql
backend/sqlserver/sql/start/20_stored_procedure/userinfo_table/: 20240210_sp_userinfo_create.sql
backend/surrealdb/: Cargo.toml
backend/surrealdb/crates/libs/lib-rpc/: Cargo.toml
backend/surrealdb/sql/: 102-define-table-task.surql  201-create_userinfo.surql  202_create_task.surql
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/pwd/: mod.rs
crates/libs/lib-auth/src/pwd/scheme/: scheme_02.rs
crates/libs/lib-auth/src/token/: mod.rs
crates/libs/lib-rpc/src/: error.rs
crates/libs/lib-rpc/src/router/: into_params.rs
crates/libs/lib-surrealdb/src/: lib.rs
crates/libs/lib-surrealdb/src/ctx/: error.rs
crates/libs/lib-surrealdb/src/model/: mod.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: time.rs
crates/services/web-server/src/: main.rs
crates/services/web-server/src/web/: routes_login.rs  routes_rpc.rs  routes_static.rs
frontend-next/: package-lock.json  package.json
frontend/next/: auth.config.ts  auth.ts  middleware.ts  middleware.ts.auth  next-auth.d.ts  package-lock.json  package.json  routes.ts
frontend/next/actions/: login.tsx  register.tsx
frontend/next/app/: page.tsx
frontend/next/app/(protected)/settings/: page.tsx
frontend/next/app/auth/: layout.tsx
frontend/next/components/auth/: back-button.tsx  card-wrapper.tsx  header.tsx  login-form.tsx  register-form.tsx  social.tsx
frontend/next/data/: user.ts
frontend/next/schemas/: index.ts
requests/: login.http
sql/: 101-define-table-userinfo.surql
(+29 files in other folders)
