[workspace.lints.rust]
unsafe_code = "forbid"
# useused = "allow"

[workspace]
resolver = "2"
members = [
    # -- Application Libraries
    "crates/libs/lib-utils",     # e.g., base64, time.
    "crates/libs/lib-rpc",       # e.g., rpc routing.
    "crates/libs/lib-auth",      # e.g., for pwd, token.
    "crates/libs/lib-sqlserver", # e.g., model, ctx, config.

    # -- Application Services
    "crates/services/web-server",
]
