[package]
name = "lib-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
argon2 = { version = "0.5.2", features = ["std"] }
derive_more = "0.99.17"
enum_dispatch = "0.3.12"
hmac = "0.12.1"
lazy-regex = "3.1.0"
lib-utils = { version = "0.1.0", path = "../lib-utils" }
serde = { version = "1.0.193", features = ["derive"] }
sha2 = "0.10.8"
tokio = "1.35.1"
uuid = "1.6.1"

[lints]
workspace = true

[dev-dependencies]
anyhow = "1.0.76"
