[package]
name = "lib-surrealdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
derive_more = "0.99.17"
lib-utils = { version = "0.1.0", path = "../lib-utils" }
once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_with = "3.4.0"
surrealdb = "1.0.2"
tracing = "0.1.40"
uuid = "1.6.1"

[lints]
workspace = true

[dev-dependencies]
serial_test = "3.0.0"
tokio = { version = "1.35.1", features = ["full"] }
