[package]
name = "lib-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
derive_more = "0.99.17"
lib-sqlserver = { version = "0.1.0", path = "../../libs/lib-sqlserver" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
serde_with = "3.4.0"

[lints]
workspace = true
